--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
+    "daisyui": "^1.0.2",
     "next": "latest",
-    "next-pwa": "^3.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "next-images": "^1.7.0",
+    "next-pwa": "latest",
+    "next-themes": "^0.0.14",
+    "react": "latest",
+    "react-dom": "latest"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^15.6.1",
+    "@types/react": "^17.0.6",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.3.0",
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.2.4"
+  }
 }
