--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
@@ -21,7 +21,6 @@
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.6",
     "autoprefixer": "^10.2.5",
-    "node-sass": "^6.0.0",
     "postcss": "^8.3.0",
     "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
